		also copied databases from 64 to 32 bit systems.
		Some *BSD systems are updated too!

		Rolf, please report the results of the upgrade.

v0.83.14	23-Feb-2006

	upgrade:
		Start and stop mbsetup, this will upgrade the nodes settings.

	mbfido:
		Uses archiver from the setup to pack mail for a node.

	mbsebbs:
		Added Change archiver menu.
		Added crontrol-U0 to display current archiver.

	mbsetup:
		Added archiver selection for nodes in node setup.
		In archiver select added checks for valid archivers and allowed
		escape without selecting an archiver.
		Added selection of archiver select menu.

	lang:
		New prompts 86, 87, 88 and 89.

	examples:
		Updated Engish menus and txtfiles.


v0.83.13	13-Feb-2006 - 23-Feb-2006

	upgrade:
		Start mbsetup and leave. If files databases need to be fixed
		it will then be done.

	mbselib.a:
		Fixed another 32/64 bit issue in the files databases and added
		automatic correction if detected.

	mbsebbs:
		Writes LINES and COLUMNS environment into data.msg so that the
		joe editor can use that.
		Changed zmodem transmitter timeout to 60 seconds and changed
		the zmodem init fase so that clients that don't start automatic
		have a chance to start the transfer.
		The zmodem transmitter now uses buffered output.

	mbmsg:
		With the post function the right time is now used.

	mbcico:
		Added real error message for failed outgoing IP connections.

	mbtask:
		Fixed startup problem on new installations.
		Some code cleanup.

	mbsetup:
		When a filearea was moved to another path the symlinks were not
		moved to the new path.


v0.83.12	06-Feb-2006 - 13-Feb-2006

	mbselib.a:
		On socket send error 2, abort the client program.

	mbsebbs:
		Added screen rows detection using ANSI sequences needed for
		some terminal programs like minicom.

	mbtask:
		On shutdown also send PART and QUIT messages to all our links
		for our own users if they are still online so that the network
		will keep the correct state.